# pulumi-equinix-metal

./: .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  Makefile  README.md
.github/workflows/: command-dispatch.yml  lint.yml  master.yml  prerelease.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml
examples/: examples_dotnet_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod
examples/webserver/: Pulumi.yaml  index.ts  package-lock.json  package.json
provider/: go.mod  go.sum  resources.go
sdk/: go.mod
sdk/dotnet/: BgpSession.cs  Connection.cs  Device.cs  DeviceNetworkType.cs  Enums.cs  Gateway.cs  GetConnection.cs  GetPort.cs  (+38 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_equinix_metal/: README.md  __init__.py  _enums.py  _inputs.py  _tables.py  bgp_session.py  connection.py  device.py  device_network_type.py  gateway.py  get_connection.py  get_device.py  get_device_bgp_neighbors.py  get_facility.py  get_gateway.py  get_hardware_reservation.py  get_ip_block_ranges.py  get_metro.py  get_operating_system.py  get_organization.py  get_port.py  get_precreated_ip_block.py  get_project.py  get_project_ssh_key.py  get_reserved_ip_block.py  get_spot_market_price.py  get_spot_market_request.py  get_virtual_circuit.py  get_vlan.py  get_volume.py  ip_attachment.py  organization.py  outputs.py  port.py  port_vlan_attachment.py  project.py  project_api_key.py  project_ssh_key.py  provider.py  pulumi-plugin.json  (+8 more)
sdk/python/pulumi_equinix_metal/config/: __init__.pyi  vars.py
(+308 files in other folders)
