[project]
  name = "pulumi_equinix_metal"
  description = "A Pulumi package for creating and managing equinix-metal cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "equinix-metal"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.io"
    Repository = "https://github.com/pulumi/pulumi-equinix-metal"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_equinix_metal = ["py.typed", "pulumi-plugin.json"]
